feat: problems 1, and an attempt at problem 2 if it would build...

--- a/problem02/BUILD
+++ b/problem02/BUILD
@@ -1,12 +1,6 @@
 load(
     "@build_bazel_rules_apple//apple:macos.bzl",
     "macos_command_line_application",
-    "macos_unit_test",
-)
-
-load(
-    "@build_bazel_rules_apple//apple:versioning.bzl",
-    "apple_bundle_version",
 )
 
 load(
@@ -17,7 +11,7 @@ load(
 swift_library(
     name = "Sources",
     srcs = ["src/main.swift"],
-    data = ["resources/problem01.txt"],
+    data = ["resources/data.txt"],
     deps = [
         "@swift_pkgs//swift-log:Logging",
         "@swift_pkgs//swift-collections:Collections",
@@ -25,11 +19,6 @@ swift_library(
     ],
 )
 
-swift_library(
-    name = "testSources",
-    srcs = ["src/tests.swift"],
-    deps = [":Sources"]
-)
 
 macos_command_line_application(
     name = "cli",
@@ -38,12 +27,4 @@ macos_command_line_application(
     minimum_os_version = "10.11",
     version = "//:version",
     deps = [":Sources"],
-)
-
-macos_unit_test(
-    name = "tests",
-    deps = [":testSources"],
-    minimum_os_version = "10.11",
-    bundle_id = "io.jakes.advent.advent21.tests",
-    infoplists = [":Info.plist"]
 )
