feature(fetch-problem): Auto fetch problems

--- a/adventcli/BUILD
+++ b/adventcli/BUILD
@@ -17,6 +17,7 @@ swift_library(
         "@swift_pkgs//swift-collections:Collections",
         "@swift_pkgs//swift-algorithms:Algorithms",
         "@swift_pkgs//swift-parsing:Parsing",
+        "@swift_pkgs//swift-argument-parser:ArgumentParser",
     ],
 )
 
@@ -24,7 +25,7 @@ macos_command_line_application(
     name = "cli",
     bundle_id = "io.jakes.advent.advent21",
     infoplists = [":Info.plist"],
-    minimum_os_version = "10.11",
+    minimum_os_version = "12",
     version = "//:version",
     deps = [":Sources"],
 )
